# metadata

./: CMakeLists.txt  README.md  main.cpp
common/: dfs_task.h  dfs_task_codec.c  fs_permission.h
core/: dfs_buffer.c  dfs_chain.c  dfs_conn_listen.c  dfs_notice.c  dfs_string.c  dfs_sysio.c
src/: file_index.cpp  file_index.h  nn_blk_index.cpp  nn_blk_index.h  other.h
